Keep RuneLite texture exporter Java 11 compatible